# Rofi-Themer

./: CMakeLists.txt  README.md  TODO.md  TODO.norg
data/: main.json  main.tb  polybar.json  rofi.json
include/common/: crash.hpp  crash_print.hpp  files.hpp  logs.hpp  message.h  message.hpp  stdlib.hpp
include/daemon/: common.h  common.hpp  data.h  data.hpp  files.h  table.h
src/common/: crash.cpp  crash_print.cpp  files.cpp  logs.cpp
src/daemon/: common.cpp  data.cpp  entry.cpp  files.cpp  list.cpp  main.cpp  table.cpp
src/menu/: main.cpp
src/read/: main.cpp
